# ai-crypto-trading-bot

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  backtest.py  bandit.yaml  celery_app.py  docker-compose.yml  main.py  optimizer.py  prompt_template.txt  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: coins.json
data_access/DAL/: Base_JSON_DAL.py  coins_DAL.py  orders_DAL.py  portfolio_DAL.py
data_access/data/: coins.json
data_access/models/: coin.py  paper_order.py  portfolio_item.py
database/: schema.sql
docs/: build-ai-crypto-trading-bot.md
domain/: engine.py  evaluator.py  evaluator_v1.py  evaluator_v2.py  exceptions.py  plugin_loader.py  strategy.py  strategy_v1.py  strategy_v2.py  technical_analysis.py  trading_bot.py  trading_service.py
domain/components/: engine_component.py  evaluator_component.py  strategy_component.py
domain/models/: coin.py  paper_order.py  portfolio_item.py
domain/ports/: data_storage_port.py  decision_engine_port.py  market_data_port.py
infrastructure/adapters/: binance_adapter.py  coingecko_adapter.py  json_storage_adapter.py  market_data_factory.py  multi_market_data_adapter.py  openai_adapter.py  postgres_storage_adapter.py  storage_factory.py
services/: coingecko_service.py  openai_service.py  trading_service.py
tests/: test_market_data_factory.py
utils/: load_env.py  logger.py
workers/: initializer.py  price_updater.py  tasks.py
