[project]
name = "ai-crypto-trading-bot"
version = "0.1.0"
description = "An AI-powered cryptocurrency trading bot"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "distro==1.9.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.11.0",
    "openai==1.108.1",
    "pydantic==2.11.9",
    "pydantic_core==2.33.2",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "pandas",
    "vectorbt",
    "optuna",
    "ray",
    "colorlog",
    "python-binance",
    "psycopg2-binary",
    "celery",
    "redis",
    "python-json-logger",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "bandit",
    "pytest",
    "pytest-cov",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Habilita um conjunto de regras padrão e algumas adicionais.
# pycodestyle (E), Pyflakes (F), isort (I), flake8-bugbear (B)
select = ["E", "F", "I", "B", "W"]
ignore = ["E501"] # Ignora erro de linha muito longa, o formatador cuida disso.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Começamos ignorando para facilitar a adoção
exclude = ["env", ".venv"]